<resources>
    <string name="app_name">Thoughts</string>
    <string name="action_clear">Clear Thoughts</string>
    <string name="add_value">Add A Value</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="notification_title">Take a look at your values</string>
    <string name="notification_text">Tap to open values</string>
    <string name="firebase_root">https://droidowlthoughts.firebaseio.com/</string>
    <string name="notification_setting_summary">Turn on for notifications</string>
    <string name="notification_setting_title">Enable Notifications</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_notification_key">prefEnableNotification</string>
    <string name="action_value">Values</string>
    <string name="action_settings">Settings</string>
    <string name="notifications_enabled">Notifications are enabled</string>
    <string name="notifications_disabled">Notifications are disabled</string>
    <string name="time_title">Choose a Time</string>
    <string name="hour_title">Daily Notification Time</string>
    <string name="hour_summary">Set the time to receive a daily
        notification</string>
    <string name="pref_time_key">prefNotificationTime</string>
    <string name="notifications_not_enabled">Notifications are not enabled,
        please go to settings</string>
    <string name="pref_clear_records_key">prefClearRecordsKey</string>
    <string name="pref_clear_records_summary">Select to remove all records</string>
    <string name="pref_clear_records_title">Clear Records</string>
    <string name="pref_category_clear_records">Thought Records</string>
    <string name="pref_clear_values_key">prefClearValuesKey</string>
    <string name="pref_clear_values_summary">Select to remove all
        values</string>
    <string name="pre_clear_values_title">Clear Values</string>
    <string name="pref_category_values">Values</string>
    <string name="yes_button">YES</string>
    <string name="confirm_remove">Are you sure?</string>
</resources>
