<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory android:title="@string/pref_category_notifications" >
            <CheckBoxPreference
                android:title="@string/notification_setting_title"
                android:summary="@string/notification_setting_summary"
                android:key="@string/pref_notification_key"/>
            <EditTextPreference
                android:title="@string/hour_title"
                android:summary="@string/hour_summary"
                android:key="@string/pref_time_key"
                android:inputType="time"/>
        </PreferenceCategory>
        <PreferenceCategory
            android:title="@string/pref_category_clear_records">
            <Preference android:title="@string/pref_clear_records_title"
                        android:summary="@string/pref_clear_records_summary"
                        android:key="@string/pref_clear_records_key"/>
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_category_values">
            <Preference android:title="@string/pre_clear_values_title"
                        android:summary="@string/pref_clear_values_summary"
                        android:key="@string/pref_clear_values_key"/>
        </PreferenceCategory>
</PreferenceScreen>